--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,20 @@
 name: Workflow deploy
-on: workflow_dispatch
+
+on:
+  workflow_dispatch
+
 jobs:
-    first-job:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Build Docker image
-              run: docker build -t alanzit0x/weather-app .
-            - name: Push Docker image
-              run: docker push alanzit0x/weather-app
+  first-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t alanzit0x/weather-app .
+
+      - name: Push Docker image
+        run: docker push alanzit0x/weather-app
